--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         </p>
                     </div>
                     <div class="about-picture">
-                        <img src="cute-profile.png">
+                        <img src="./cute-profile.png">
                     </div>
 
             </section>
